2011-06-21  Juanma Barranquero  <lekktu@gmail.com>

	* misc.el (list-dynamic-libraries--refresh): Compute header here...
	(list-dynamic-libraries): ...not here.

2011-06-21  Leo Liu  <sdl.web@gmail.com>

	* subr.el (sha1): Implement sha1 using secure-hash.

2011-06-21  Martin Rudalics  <rudalics@gmx.at>

	* window.el (display-buffer-alist): In default value do not
	enforce searching a window on any but the selected frame.
	Reported by Katsumi Yamaoka <yamaoka@jpl.org>.
	(display-buffer-select-window): Remove function.
	(display-buffer-in-window): When a window on another frame gets
	reused, do not select it any more but just raise its frame if
	necessary (Bug#8851) and (Bug#8856).
	(display-buffer-normalize-options): Handle pop-up-frames related
	options more faithfully.
	(pop-to-buffer): Don't rely on `display-buffer' selecting the
	window if it is on another frame.
	(display-buffer-alist, display-buffer-default-specifiers): Don't
	make new frame unsplittable by default.
	(display-buffer-normalize-argument): Fix doc-string typo and use
	'same-frame-other-window instead of 'other-window when associating
	with display-buffer-macro-specifiers.

2011-06-21  Vincent Belaïche  <vincent.b.1@hotmail.fr>

	* play/5x5.el (5x5-solve-rotate-left, 5x5-solve-rotate-right):
	New functions.
	(5x5-mode-map, 5x5-mode-menu): Bind them.
	(5x5-draw-grid): Tweak the solver's rendering.

2011-06-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/compile.el (compilation-error-regexp-alist-alist): Rename
	`caml' to `python-tracebacks-and-caml'; allow leading tabs (bug#8585).

2011-06-21  Drew Adams <drew.adams@oracle.com>

	* menu-bar.el: Use function variable instead of switch-to-buffer.
	(menu-bar-select-buffer-function): New variable.
	(menu-bar-update-buffers): Use it (bug#8876).

2011-06-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/bytecomp.el (add-to-list): Add handler to check the
	variable's status.

2011-06-20  Jan Djärv  <jan.h.d@swipnet.se>
